@@ -1865,6 +1865,8 @@ void WMShowFontPanel(WMFontPanel *panel);
 
 void WMHideFontPanel(WMFontPanel *panel);
 
+void WMSetFontPanelAction(WMFontPanel *panel, WMAction2 *action, void *data);
+
 void WMSetFontPanelFont(WMFontPanel *panel, WMFont *font);
 
 /* you can free the returned string */
